--- a/src/components/screen.css
+++ b/src/components/screen.css
@@ -75,7 +75,9 @@ body {
 .nav-links li {
   margin-right: 20px;
 }
-
+.nav-links li a:hover{
+  color: red;
+}
 .nav-links a {
   text-decoration: none;
   color: rgb(0, 0, 0);
